# pyinteroc

./: .gitignore  LICENSE  README.md  build.zig  flake.nix  main.roc  pyproject.toml  roc.py  shell.nix
ci/: build  build_all  deploy_roc_nightly.sh  push_to_public_repos  push_to_public_repos.sh  start_test_loop  test
platform/: Arg.roc  Effect.roc  Py.roc  PyTypes.roc  host.zig  main.roc
src/: main.zig
tests/: test_roc.py
