[tool.poetry]
name = "pyinteroc"
version = "0.0.1"
description = "A library for python-ROC interoperability."
authors = ["BridLeiva <yk50tcj5@duck.com>"]
license = "AGPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.include]
include = ["lib/*.so"]