[tool.poetry]
name = "pyinteroc"
version = "0.0.1"
description = "A library for python-ROC interoperability."
authors = ["BridLeiva <yk50tcj5@duck.com>"]
license = "AGPL-v3"
readme = "README.md"
include = ["lib/libmain.so", "lib/libhost.so"]

[tool.poetry.dependencies]
python = "^3.12"
cffi = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]